PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.9

- Streams:
  . Fixed bug #60455 (stream_get_line misbehaves if EOF is not detected together
    with the last read). (Gustavo)

08 Dec 2011, PHP 5.3.9RC3

- Filter:
  . Fixed Bug #55478 (FILTER_VALIDATE_EMAIL fails with internationalized 
    domain name addresses containing >1 -). (Ilia)

- cURL:
  . Fixed bug #60439 (curl_copy_handle segfault when used with
    CURLOPT_PROGRESSFUNCTION). (Pierrick)


- Date:
  . Fixed bug #54851 (DateTime::createFromFormat() doesn't interpret "D").
    (Derick)
  . Fixed bug #53502 (strtotime with timezone memory leak). (Derick)
  . Fixed bug #52062 (large timestamps with DateTime::getTimestamp and
    DateTime::setTimestamp). (Derick)
  . Fixed bug #51994 (date_parse_from_format is parsing invalid date using 'yz'
    format). (Derick)
  . Fixed bug #52113 (Seg fault while creating (by unserialization)
    DatePeriod). (Derick)

- SOAP
  . Fixed bug #54911 (Access to a undefined member in inherit SoapClient may
    cause Segmentation Fault). (Dmitry)

24 Nov 2011, PHP 5.3.9RC2

- Core:
  . Fixed bug #60138 (GC crash with referenced array in RecursiveArrayIterator)
    (Dmitry).
  . Fixed bug #60099 (__halt_compiler() works in braced namespaces). (Felipe)
  . Fixed bug #55874 (GCC does not provide __sync_fetch_and_add on some archs).
    (klightspeed at netspace dot net dot au)
  . Fixed bug #52624 (tempnam() by-pass open_basedir with nonnexistent
    directory). (Felipe)
  . Fixed invalid free in call_user_method() function. (Felipe)
    
- Zend Engine:
  . Fixed bug #43200 (Interface implementation / inheritence not possible in
    abstract classes). (Felipe)

- PHP-FPM SAPI:
  . Fixed bug #60179 (php_flag and php_value does not work properly). (fat)
  . Enhance error log when the primary script can't be open. FR #60199. (fat)